{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 444,
  "lineage": "19db2ca4-2bfd-07ea-ef87-5c187983ed97",
  "resources": [
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383817843224:loadbalancer/app/katty-ALB/fb0f379106373578",
            "arn_suffix": "app/katty-ALB/fb0f379106373578",
            "desync_mitigation_mode": "defensive",
            "dns_name": "katty-ALB-710977049.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:383817843224:loadbalancer/app/katty-ALB/fb0f379106373578",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "katty-ALB",
            "security_groups": [
              "sg-00522f1fc1f617539"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0340d94baf06169b2"
              },
              {
                "subnet_id": "subnet-05fe515e40a19db76"
              },
              {
                "subnet_id": "subnet-079c53ad46ef0d2ba"
              }
            ],
            "subnets": [
              "subnet-0340d94baf06169b2",
              "subnet-05fe515e40a19db76",
              "subnet-079c53ad46ef0d2ba"
            ],
            "vpc_id": "vpc-0f8b905abf2b0bd61",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.myecs.aws_default_subnet.default_subnet_a",
            "module.myecs.aws_default_subnet.default_subnet_b",
            "module.myecs.aws_default_subnet.default_subnet_c",
            "module.myecs.aws_default_vpc.default_vpc",
            "module.myecs.aws_security_group.alb-sg"
          ]
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383817843224:subnet/subnet-05fe515e40a19db76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-05fe515e40a19db76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383817843224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f8b905abf2b0bd61"
          }
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383817843224:subnet/subnet-0340d94baf06169b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0340d94baf06169b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383817843224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f8b905abf2b0bd61"
          }
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383817843224:subnet/subnet-079c53ad46ef0d2ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-079c53ad46ef0d2ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383817843224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f8b905abf2b0bd61"
          }
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383817843224:vpc/vpc-0f8b905abf2b0bd61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0868df965f974a60d",
            "default_route_table_id": "rtb-0b444ca8a667d593d",
            "default_security_group_id": "sg-0dd5a2d0c74d8f062",
            "dhcp_options_id": "dopt-04386e80d6883830e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f8b905abf2b0bd61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b444ca8a667d593d",
            "owner_id": "383817843224"
          }
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383817843224:listener/app/katty-ALB/fb0f379106373578/3e27570429912ee2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:383817843224:targetgroup/katty-TG/2c176014915e86a6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:383817843224:listener/app/katty-ALB/fb0f379106373578/3e27570429912ee2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:383817843224:loadbalancer/app/katty-ALB/fb0f379106373578",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myecs.aws_alb.application_load_balancer",
            "module.myecs.aws_default_subnet.default_subnet_a",
            "module.myecs.aws_default_subnet.default_subnet_b",
            "module.myecs.aws_default_subnet.default_subnet_c",
            "module.myecs.aws_default_vpc.default_vpc",
            "module.myecs.aws_lb_target_group.target_group",
            "module.myecs.aws_security_group.alb-sg"
          ]
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383817843224:targetgroup/katty-TG/2c176014915e86a6",
            "arn_suffix": "targetgroup/katty-TG/2c176014915e86a6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:383817843224:targetgroup/katty-TG/2c176014915e86a6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "katty-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f8b905abf2b0bd61"
          },
          "dependencies": [
            "module.myecs.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383817843224:security-group/sg-00522f1fc1f617539",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00522f1fc1f617539",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "383817843224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8b905abf2b0bd61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myecs.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383817843224:security-group/sg-0c9af339f10991a0a",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9af339f10991a0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "383817843224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8b905abf2b0bd61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myecs.aws_default_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}